--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ cortex-m             = { version = "0.5.4", features = [ "const-fn" ] }
 cortex-m-rt          = "0.6.3"
 cortex-m-semihosting = "0.3.0"
 embedded-hal         = "0.2.1"
-nrf52832-hal         = "0.6.0"
+
+
+[dependencies.nrf52832-hal]
+version = "0.6.0"
+default-features = false
+features = ["xxAA-package", "rt"]
 
 [dependencies.dw1000]
 git = "https://github.com/ferrous-systems/rust-dw1000.git"
